@@ -566,8 +566,9 @@ file system locations may be directories, JAR files or JMOD files.
     section of the `javadoc` command documentation.
 
 <a id="option-Xlint">`-Xlint`</a>
-:   Enables recommended lint warning categories. In this release, all available
-    lint warning categories are recommended.
+:   Enables recommended lint warning categories. All lint warning categories are
+    recommended by default. If preview language features are enabled
+    (`--enable-preview`), all lint warning categories except `preview` are recommended.
 
 <a id="option-Xlint-custom">`-Xlint:`\[`-`\]*key*(`,`\[`-`\]*key*)\*</a>
 :   Enables and/or disables lint warning categories using the one or more of the keys described
